@@ -3,6 +3,7 @@ Version 1.1.15 (released ??-???-????)
   * security fix: complete authz support for remote SVN views (issue #353)
   * security fix: log msg leak in SVN revision view with unreadable copy source
   * fix several instances of incorrect information in remote SVN views
+  * increase performance of some revision metadata lookups in remote SVN views
 
 Version 1.1.14 (released 12-Jun-2012)
 
